# routes/index.js
@@ -4,19 +4,15 @@ const { ensureAuth, ensureGuest } = require('../middleware/user');
 const observationRoutes = require('./observation');
 const userRoutes = require('./user');
 
-// @desc    Login/Landing page
-// @route   GET /
 router.get('/', ensureGuest, (req, res) => {
     res.render('login', {
         layout: 'login',
     });
 });
 
-// @desc    Dashboard
-// @route   GET /dashboard
 router.get('/dashboard', ensureAuth, async (req, res) => {
     try {
-        const observations = await observationRoutes.getUsers(req, res);
+        const observations = await observationRoutes(req, res);
         res.render('dashboard', {
             name: req.user.firstName,
             observations,
@@ -27,8 +23,8 @@ router.get('/dashboard', ensureAuth, async (req, res) => {
     }
 });
 
-router.use('/observations', observationRoutes);
+router.use('/observation', observationRoutes);
 
-router.use('/users', userRoutes);
+router.use('/user', userRoutes);
 
 module.exports = router;
